@@ -1,3 +1,11 @@
+Fri Mar 18 05:21:08 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/config-lynxos.h:
+          Layout changes and cleanups.
+
+        * include/makeinclude/platform_lynxos.GNU:
+          Use -lnetinet instead of -lbsd
+
 Fri Mar 18 05:16:45 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/README:
